@@ -16,6 +16,7 @@
 
 package vogar.android;
 
+import com.google.common.base.Supplier;
 import com.google.common.collect.Iterables;
 import java.io.File;
 import java.util.ArrayList;
@@ -39,8 +40,11 @@ import vogar.tasks.Task;
 public final class DeviceRuntime implements Mode {
     private final Run run;
     private final ModeId modeId;
+    private final Supplier<String> deviceUserNameSupplier;
 
-  public DeviceRuntime(Run run, ModeId modeId, Variant variant) {
+    public DeviceRuntime(Run run, ModeId modeId, Variant variant,
+                         Supplier<String> deviceUserNameSupplier) {
+        this.deviceUserNameSupplier = deviceUserNameSupplier;
         if (!modeId.isDevice() || !modeId.supportsVariant(variant)) {
             throw new IllegalArgumentException("Unsupported mode:" + modeId +
                     " or variant: " + variant);
@@ -53,7 +57,7 @@ public final class DeviceRuntime implements Mode {
         Set<Task> result = new HashSet<Task>();
         // dex everything on the classpath and push it to the device.
         for (File classpathElement : run.classpath.getElements()) {
-            dexAndPush(result, run.basenameOfJar(classpathElement),
+            addCreateDexJarAndPushTasks(result, run.basenameOfJar(classpathElement),
                     classpathElement, null);
         }
         return result;
@@ -61,7 +65,7 @@ public final class DeviceRuntime implements Mode {
 
     @Override public Set<Task> installActionTasks(Action action, File jar) {
         Set<Task> result = new HashSet<Task>();
-        dexAndPush(result, action.getName(), jar, action);
+        addCreateDexJarAndPushTasks(result, action.getName(), jar, action);
         return result;
     }
 
@@ -69,30 +73,22 @@ public final class DeviceRuntime implements Mode {
         return new RunActionTask(run, action, useLargeTimeout);
     }
 
-    private void dexAndPush(Set<Task> tasks, String name, File jar, Action action) {
-        File localDex = run.localDexFile(name);
-        File deviceDex = run.targetDexFile(name);
-        Task dex = new DexTask(run.androidSdk, run.classpath, run.benchmark, name, jar, action,
-                localDex);
-        tasks.add(dex);
-        tasks.add(run.target.pushTask(localDex, deviceDex).afterSuccess(dex));
-    }
-
     @Override public VmCommandBuilder newVmCommandBuilder(Action action, File workingDirectory) {
         List<String> vmCommand = new ArrayList<String>();
-        vmCommand.addAll(run.target.targetProcessPrefix());
-        vmCommand.add("cd");
-        vmCommand.add(workingDirectory.getAbsolutePath());
-        vmCommand.add("&&");
-        vmCommand.add(run.getAndroidData());
         Iterables.addAll(vmCommand, run.invokeWith());
         vmCommand.add(run.vmCommand);
 
         // If you edit this, see also HostRuntime...
         VmCommandBuilder vmCommandBuilder = new VmCommandBuilder(run.log)
+                .env("ANDROID_DATA", run.getAndroidDataPath())
+                .workingDirectory(workingDirectory)
                 .vmCommand(vmCommand)
                 .vmArgs("-Duser.home=" + run.deviceUserHome)
                 .maxLength(1024);
+        if (run.debugPort != null) {
+            vmCommandBuilder.vmArgs("-Xcompiler-option", "--debuggable");
+        }
+
         if (modeId == ModeId.APP_PROCESS) {
             return vmCommandBuilder
                 .vmArgs(action.getUserDir().getPath())
@@ -100,20 +96,11 @@ public final class DeviceRuntime implements Mode {
         }
 
         vmCommandBuilder
-                .vmArgs("-Duser.name=" + run.target.getDeviceUserName())
+                .vmArgs("-Duser.name=" + deviceUserNameSupplier.get())
                 .vmArgs("-Duser.language=en")
                 .vmArgs("-Duser.region=US");
 
-        if (modeId == ModeId.DEVICE_ART_KITKAT) {
-            // Required for KitKat to select the ART runtime. Default is Dalvik.
-            vmCommandBuilder.vmArgs("-XXlib:libart.so");
-        }
-        if (!run.benchmark) {
-            if (modeId == ModeId.DEVICE_DALVIK) {
-              // Historically, vogar has turned off these options for Dalvik.
-              vmCommandBuilder.vmArgs("-Xverify:none");
-              vmCommandBuilder.vmArgs("-Xdexopt:none");
-            }
+        if (!run.benchmark && run.checkJni) {
             vmCommandBuilder.vmArgs("-Xcheck:jni");
         }
         // dalvikvm defaults to no limit, but the framework sets the limit at 2000.
@@ -136,5 +123,27 @@ public final class DeviceRuntime implements Mode {
         // Note we intentionally do not add run.resourceClasspath on
         // the device since it contains host path names.
         return result;
+    }
+
+    private void addCreateDexJarAndPushTasks(
+            Set<Task> tasks, String name, File jar, Action action) {
+        File localDex = run.localDexFile(name);
+        File deviceDex = run.targetDexFile(name);
+        Task createDexJarTask = newCreateDexJarTask(run.classpath, jar, name, action, localDex);
+        tasks.add(createDexJarTask);
+        tasks.add(run.target.pushTask(localDex, deviceDex).afterSuccess(createDexJarTask));
+    }
+
+    private Task newCreateDexJarTask(Classpath classpath, File classpathElement, String name,
+            Action action, File localDex) {
+        Task dex;
+        if (run.useJack) {
+            dex = new JackDexTask(run, classpath, run.benchmark, name, classpathElement,
+                    action, localDex);
+        } else {
+            dex = new DexTask(run.androidSdk, classpath, run.benchmark, name, classpathElement,
+                    action, localDex);
+        }
+        return dex;
     }
 }
